TestSuite/errors/err0325.pas
begin
  var a: sequence of (byte, procedure);
  a.Select(p -> p);
end.